# Sen_CAP_Ind_ARDUINO

libraries/TouchLib/src/REG/: FT5x06Constants.h
libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_comp_hook.c  ui_events.h  ui_font_DIGIT.c  ui_font_DIGIT42.c  ui_font_Digit72.c  ui_font_Display16.c  ui_font_Display24.c  ui_font_Font2.c  ui_font_Font24.c  ui_font_Font48.c  ui_font_Font64.c  ui_font_RB10.c  ui_font_RB12.c  ui_font_RB14.c  ui_font_RB18.c  ui_font_RB20.c  ui_font_RB24.c  ui_font_RB26.c  ui_font_RB32.c  ui_font_RB50.c  ui_font_RB60.c  ui_font_RB72.c  ui_font_RB8.c  ui_font_ROBOTO12.c  ui_font_RR12.c  ui_font_RR14.c  ui_font_Roboto16.c  ui_font_Roboto40.c  ui_font_Roboto44.c  ui_font_Robotonum72.c  ui_font_cr10.c  ui_font_cr12.c  ui_font_cr14.c  ui_font_cr16.c  ui_font_cr20.c  (+25 more)
ui/: touch.h  ui.ino
