SET(SOURCES ui_Screen1.c
    ui.c
    ui_comp_hook.c
    ui_helpers.c
    ui_img_clockpage_png.c
    ui_img_circle_7_png.c
    ui_img_circle1_png.c
    ui_img_1907357479.c
    ui_img_particle_2_png.c
    ui_img_particle_3_png.c
    ui_img_1757784814.c
    ui_img_square1_png.c
    ui_img_545167323.c
    ui_img_1116411096.c
    ui_img_uqoxj1_png.c
    ui_img_water_1_png.c
    ui_img_water_2_png.c
    fonts/ui_font_cr10.c
    fonts/ui_font_cr12.c
    fonts/ui_font_cr14.c
    fonts/ui_font_cr16.c
    fonts/ui_font_cr20.c
    fonts/ui_font_cr40.c
    fonts/ui_font_cr72.c
    fonts/ui_font_cr84.c
    fonts/ui_font_crb20.c
    fonts/ui_font_crb32.c
    fonts/ui_font_crb84.c
    fonts/ui_font_DIGIT.c
    fonts/ui_font_DIGIT42.c
    fonts/ui_font_Digit72.c
    fonts/ui_font_Display16.c
    fonts/ui_font_Display24.c
    fonts/ui_font_disp_50.c
    fonts/ui_font_disp_55.c
    fonts/ui_font_disp_60.c
    fonts/ui_font_Font2.c
    fonts/ui_font_Font24.c
    fonts/ui_font_Font48.c
    fonts/ui_font_Font64.c
    fonts/ui_font_RB10.c
    fonts/ui_font_RB12.c
    fonts/ui_font_RB14.c
    fonts/ui_font_RB18.c
    fonts/ui_font_RB20.c
    fonts/ui_font_RB24.c
    fonts/ui_font_RB26.c
    fonts/ui_font_RB32.c
    fonts/ui_font_RB50.c
    fonts/ui_font_RB60.c
    fonts/ui_font_RB72.c
    fonts/ui_font_RB8.c
    fonts/ui_font_ROBOTO12.c
    fonts/ui_font_Roboto16.c
    fonts/ui_font_roboto24.c
    fonts/ui_font_roboto32.c
    fonts/ui_font_Roboto40.c
    fonts/ui_font_Roboto44.c
    fonts/ui_font_Robotonum72.c
    fonts/ui_font_RR12.c
    fonts/ui_font_RR14.c)

add_library(ui ${SOURCES})
